fixed admin panel minimum width to prevent button bar from overlapping background elements

--- a/public/style.css
+++ b/public/style.css
@@ -466,7 +466,7 @@ br.clear { clear: both; }
 #content .admin {
 	padding-right: 20px;
 	margin: 20px;
-	min-width: 300px;
+	min-width: 350px;
 }
 
 /******************************************************************************
